deploy/template.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: deployment-COMPONENT
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: COMPONENT
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: COMPONENT
    spec:
      containers:
        - image: 653470767467.dkr.ecr.eu-west-3.amazonaws.com/COMPONENT:VERSION
          imagePullPolicy: Always
          name: COMPONENT
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: service-COMPONENT
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: COMPONENT
