deploy/ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: deployment-ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ui
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ui
    spec:
      containers:
        - image: 068668040281.dkr.ecr.us-east-2.amazonaws.com/ui:43bb58
          imagePullPolicy: Always
          name: ui
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: service-ui
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ui
