deploy/user.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: deployment-user
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: user
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: user
    spec:
      containers:
        - image: 068668040281.dkr.ecr.us-east-2.amazonaws.com/user:ce64ec
          imagePullPolicy: Always
          name: user
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: service-user
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: user
